ci(cartservice): set build context to src/cartservice/src

--- a/.github/workflows/build-ecr.yml
+++ b/.github/workflows/build-ecr.yml
@@ -21,7 +21,7 @@ jobs:
         include:
           # cartservice uses a nested Dockerfile
           - service: cartservice
-            context: ./src/cartservice
+            context: ./src/cartservice/src
             dockerfile: ./src/cartservice/src/Dockerfile
 
           # the rest use standard locations
