--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,22 +1,31 @@
 name: codeql
+
 on:
-  push: { branches: [ main ] }
-  pull_request: { branches: [ main] }
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  schedule:
+    - cron: '28 2 * * 1'
+  workflow_dispatch:
+
 permissions:
   contents: read
   security-events: write
+
 jobs:
   analyze:
     name: CodeQL
     runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
     steps:
       - uses: actions/checkout@v4
+
       - uses: github/codeql-action/init@v3
         with:
-          languages: auto
+          languages: go, javascript, python, java, csharp
+
       - uses: github/codeql-action/autobuild@v3
+
       - uses: github/codeql-action/analyze@v3
+        with:
+          category: codeql
