--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -14,15 +14,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Semgrep (SAST & IaC)
+      - name: Semgrep SAST+IaC
         id: semgrep
         uses: returntocorp/semgrep-action@v1
         with:
           config: p/ci
           args: --sarif --output=semgrep.sarif
-        continue-on-error: true   # TEMP: don't fail the pipeline
-      - name: Upload Semgrep SARIF to GitHub
-        if: always()
+        continue-on-error: true   # TEMP: don’t fail pipeline; tighten later
+      - name: Upload Semgrep SARIF
+        if: always() && hashFiles('semgrep.sarif') != ''
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: semgrep.sarif
@@ -40,9 +40,9 @@ jobs:
           severity: CRITICAL,HIGH
           format: sarif
           output: trivy-fs.sarif
-          exit-code: '0'          # TEMP: allow pipeline to pass
-      - name: Upload Trivy SARIF to GitHub
-        if: always()
+          exit-code: '0'          # TEMP: don’t break pipeline
+      - name: Upload Trivy SARIF
+        if: always() && hashFiles('trivy-fs.sarif') != ''
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: trivy-fs.sarif
